=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


** CHANGES ALONG trunk
-----------------------------------------------------------------------
2016-04-25                                                    trunk-487
Corrected version in the CHANGES file

-----------------------------------------------------------------------
2016-04-25                                                    trunk-486
Calculation of the Hubbard-like matrix elements, and their contribution
to forces and stresses

* The files that have been added or modified are: 

- atmfuncs.f:       New function ldau_gindex added
- basis_io.F:       The information of the LDA+U projectors is dumped into 
                    the corresponding files
- compute_energies.F90:  The Hubbard energy is added to the total energy
- compute_max_diff.F:    The maximum difference between the input and the 
                         output density matrices is saved in the public
                         variable dDmax_current, that is required within
                         the hubbard_term subroutine in order to know
                         whether the population of the LDA+U projector is 
                         updated or not.
- final_H_f_stress.F:    Last call to hubbard_term in order to compute the
                         forces and stresses once the self-consistency is 
                         achieved
- hsparse.F:        The eventual overlap with the LDA+U projectors is 
                    considered, as it was done with the KB projectors
- initatom.f:       Call to the subroutine ldau_proj_gen to generate the
                    LDA+U projectors
- m_energies.F90:   The Hubbard energies are included in the variables
- scfconvergence_test.F: The criterion on the convergence of the population of